<resources>
    <string name="app_name">TodoList</string>
    <string name="task_name">Nazwa zadania</string>
    <string name="task_description">Opis zadania</string>
    <string name="task_date">Data</string>
    <string name="task_hour">Godzina</string>
    <string name="task_category">Kategoria</string>
    <string name="task_priority">Priorytet</string>
    <string name="save">Zapisz</string>
    <string name="delete">Usuń</string>
    <string name="empty">---</string>
    <string name="complete">Oznacz jako ukończone</string>
    <string name="sorting">Sortowanie</string>
    <string name="search">Szukaj</string>
    <string name="add_attachment">Dodaj załącznik</string>
    <string name="export">Eksport listy do pliku</string>
    <string name="enter_file_name">Podaj nazwę pliku</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>

    <string-array name="sorting_array">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Od najnowszych</item>
        <item>Od najstarszych</item>
        <item>Od najważniejszych</item>
        <item>Od najmniej ważnych</item>
    </string-array>

    <string-array name="task_priorities">
        <item>Niski</item>
        <item>Średni</item>
        <item>Wysoki</item>
    </string-array>

    <string-array name="task_categories">
        <item>Studia</item>
        <item>Praca</item>
        <item>Dom</item>
    </string-array>
</resources>
